--- a/.github/workflows/run-command.yml
+++ b/.github/workflows/run-command.yml
@@ -1,9 +1,9 @@
 name: Sync to Habitica
 
 on:
-  schedule:
-  # run every hour on the hour
-    - cron:  '0 * * * *'
+    push:
+      branches:
+        ["autosync"]
 
 jobs:
   build:
